--- a/haskelTest.cabal
+++ b/haskelTest.cabal
@@ -22,13 +22,16 @@ maintainer:         camilo.schaserhughes@gmail.com
 extra-source-files: CHANGELOG.md
 
 executable haskelTest
-    main-is:          Main.hs
+    -- import: warnings --NOT SURE WHY THIS DOESN'T WORK?
+    main-is: Main.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
+    build-depends:
+        base ^>=4.14.3.0,
+        haskell-say ^>=1.0.0.0
     hs-source-dirs:   app
     default-language: Haskell2010
